--- a/index.html
+++ b/index.html
@@ -233,13 +233,13 @@
         </div>
         <div class="row text-center gy-5" style="padding-top: 30px;" dir="rtl">
             <div class="col-12 col-md-4" style="padding-top: 10px;">
-                <img class="img-fluid" style="width: 68px; height: 68px;" src="Design/login icon.png" />
+                <img class="img-fluid" style="width: 68px; height: 68px;" src="sources/img/login icon.png" />
                 <p class="fs-4 gh">ورود به حساب کاربری</p>
                 <p class="fs-5 description">داخل گزارش ۱۴۵ سیستم گلستان برای هر دانشجو مشخصات حساب کاربری سایت پارکینگ ثبت شده.
                     کافیه از اونجا اطلاعات رو برداری و بیای اینجا وارد حساب کاربری ات بشی!</p>
             </div>
             <div class="col-12 col-md-4">
-                <img class="img-fluid" style="width: 100px; height: 77px;" src="Design/parking lots icon.png"/>
+                <img class="img-fluid" style="width: 100px; height: 77px;" src="sources/img/parking lots icon.png"/>
                 <p class="fs-4 gh">مشاهده جایگاه های پارک</p>
                 <p class="fs-5 description">
                     بلافاصله بعد از ورود، به صفحه رزرو هدایت می شی. از روی نقشه بین جایگاه های موجود، اونی که مدنظرت هست رو انتخاب کن.
@@ -247,7 +247,7 @@
                 </p>
             </div>
             <div class="col-12 col-md-4" style="padding-top: 10px;">
-                <img class="img-fluid" style="width: 68px; height: 68px;" src="Design/Selectecd icon.png" />
+                <img class="img-fluid" style="width: 68px; height: 68px;" src="sources/img/Selectecd icon.png" />
                 <p class="fs-4 gh">تایید نهایی و رزرو</p>
                 <p class="fs-5 description">
                     وقتی جایگاه پارک رو انتخاب میکنی، یک پنجره کوچیک باز میشه و با زدن دکمه تایید، به صورت اتوماتیک هزینه از موجودی حسابت برداشته شده و رسید رزرو موفق بهت نشون داده میشه تا بتونی ذخیرش کنی!
@@ -264,28 +264,28 @@
         </div>
         <div class="row text-center gx-1 gy-5" style="padding-top: 65px;">
             <div class="col-12 col-md-3">
-                <img class="img-fluid" style="width: 202px; height: 202px;" src="Design/Behrad Roshanrad.png"/>
+                <img class="img-fluid" style="width: 202px; height: 202px;" src="sources/img/Behrad Roshanrad.png"/>
                 <p class="fs-5 fh">بهراد روشن راد</p>
                 <p class="fs-6 fm">کارشناسی مهندسی کامپیوتر</p>
                 <p class="fs-6 fm">دانشگاه صنعتی شیراز</p>
                 <p class="fs-6 description" style="font-family: 'shabnam-bold'; padding-top: 10px; color: black; text-align-last: right;">صبح اگر یکم دیر میرسیدم باید کلی دنبال جای پارک می گشتم، حالا از عصر روز قبل جا رو رزرو میکنم و صبح بدون معطلی برای گشتن میام پارک میکنم.</p>
             </div>
             <div class="col-12 col-md-3">
-                <img class="img-fluid" style="width: 202px; height: 202px;" src="Design/Ali Hajeb.png"/>
+                <img class="img-fluid" style="width: 202px; height: 202px;" src="sources/img/Ali Hajeb.png"/>
                 <p class="fs-5 fh">علی حاجب</p>
                 <p class="fs-6 fm">کارشناسی مهندسی کامپیوتر</p>
                 <p class="fs-6 fm">دانشگاه صنعتی شیراز</p>
                 <p class="fs-6 description" style="font-family: 'shabnam-bold'; padding-top: 10px; color: black; text-align-last: right;">من خوابگاهی هستم و اکثرا مشکلی با جای پارک ندارم جز ایام امتحانات! این که اولویت روزانه با دانشجویانی هست که همون روز امتحان دارن عالیه.</p>
             </div>
             <div class="col-12 col-md-3">
-                <img class="img-fluid" style="width: 202px; height: 202px;" src="Design/Sobhan Mohammadi.png"/>
+                <img class="img-fluid" style="width: 202px; height: 202px;" src="sources/img/Sobhan Mohammadi.png"/>
                 <p class="fs-5 fh">سبحان محمدی</p>
                 <p class="fs-6 fm">کارشناسی مهندسی عمران</p>
                 <p class="fs-6 fm">دانشگاه آزاد اسلامی واحد صدرا</p>
                 <p class="fs-6 description" style="font-family: 'shabnam-bold'; padding-top: 10px; color: black; text-align-last: right;">برای دوره ها و کارگاه های انجمن های علمی بعضی وقت ها میام دانشگاه صنعتی. خوبه که میتونم به صورت موقت جای پارکی رو رزرو کنم و خیالم از ماشینم راحت باشه.</p>
             </div>
             <div class="col-12 col-md-3">
-                <img class="img-fluid" style="width: 202px; height: 202px;" src="Design/Pointing finger.png"/>
+                <img class="img-fluid" style="width: 202px; height: 202px;" src="sources/img/Pointing finger.png"/>
                 <p class="fs-5 fh">خودت!</p>
                 <p class="fs-6 fm">مقطع تحصیلی خودت</p>
                 <p class="fs-6 fm">دانشگاهی که هستی</p>
@@ -298,7 +298,7 @@
                 <div style="width: 100%; background-color: #E8BE35; padding: 25px 30px; border-radius: 30px; color: #283060;">
                     <div class="row align-items-center">
                         <div class="col-12">
-                            <img class="img-fluid" style="width: 56px; height: 56px;" src="Design/users.png" />
+                            <img class="img-fluid" style="width: 56px; height: 56px;" src="sources/img/users.png" />
                             <p class="fs-4 fn d-inline-block" >کاربران این وب سایت فقط دانشجو های خودمون نیستن!</p>
                             <p class="fs-6" style="font-family: 'shabnam'; margin-bottom: 0px; text-align: justify; line-height: 32px;">اگر کار اداری ای تو دانشگاه داری (مثل درخواست مهمانی) یا میخوای دوره ها و کارگاه ها رو شرکت کنی، با ایجاد حساب کاربری و آپلود و وارد کردن اطلاعاتت برای دانشگاه درخواست
                                 میذاری تا بررسیش کنن و در صورتی که از موارد بالا باشه، به صورت موقت میتونی داخل دانشگاه جای پارک رزرو کنی!</p>
@@ -316,10 +316,10 @@
             <div class="col-12"><div class="btn fs-4" style="color: white; background-color: #283060; font-family: 'shabnam-bold'; border-radius: 20px; padding: 15px 30px;">API عملکرد های اصلی سامانه</div></div>
         </div>
         <div class="row text-center gx-1 gy-5" style="padding-top: 70px;">
-            <div class="col-12 col-md-3"><img class="img-fluid" style="width: 115px; height: 70px;" src="Design/sign-up main blue.png"/><p class="fs-5 ah">ثبت نام</p><button type="button" class="btn fs-5 viewdocument">مشاهده مستندات</button></div>
-            <div class="col-12 col-md-3"><img class="img-fluid" style="width: 70px; height: 70px;" src="Design/Account white.png"/><p class="fs-5 ah">ورود به حساب</p><button type="button" class="btn fs-5 viewdocument">مشاهده مستندات</button></div>
-            <div class="col-12 col-md-3"><img class="img-fluid" style="width: 91px; height: 70px;" src="Design/parking lots icon.png"/><p class="fs-5 ah">اطلاعات جایگاه ها</p><button type="button" class="btn fs-5 viewdocument">مشاهده مستندات</button></div>
-            <div class="col-12 col-md-3"><img class="img-fluid" style="width: 70px; height: 70px;" src="Design/Selectecd icon.png"/><p class="fs-5 ah">رزرو جایگاه</p><button type="button" class="btn fs-5 viewdocument">مشاهده مستندات</button></div>
+            <div class="col-12 col-md-3"><img class="img-fluid" style="width: 115px; height: 70px;" src="sources/img/sign-up main blue.png"/><p class="fs-5 ah">ثبت نام</p><button type="button" class="btn fs-5 viewdocument">مشاهده مستندات</button></div>
+            <div class="col-12 col-md-3"><img class="img-fluid" style="width: 70px; height: 70px;" src="sources/img/Account white.png"/><p class="fs-5 ah">ورود به حساب</p><button type="button" class="btn fs-5 viewdocument">مشاهده مستندات</button></div>
+            <div class="col-12 col-md-3"><img class="img-fluid" style="width: 91px; height: 70px;" src="sources/img/parking lots icon.png"/><p class="fs-5 ah">اطلاعات جایگاه ها</p><button type="button" class="btn fs-5 viewdocument">مشاهده مستندات</button></div>
+            <div class="col-12 col-md-3"><img class="img-fluid" style="width: 70px; height: 70px;" src="sources/img/Selectecd icon.png"/><p class="fs-5 ah">رزرو جایگاه</p><button type="button" class="btn fs-5 viewdocument">مشاهده مستندات</button></div>
         </div>
     </div>
     <!-- TEAM -->
@@ -329,14 +329,14 @@
         </div>
         <div class="row text-center gy-5" style="padding-top: 55px;">
             <div class="col-12 col-md-3">
-                <img class="img-fluid" style="width: 202px; height: 202px;" src="Design/DrRezaee.png"/>
+                <img class="img-fluid" style="width: 202px; height: 202px;" src="sources/img/DrRezaee.png"/>
                 <p class="th">دکتر محمد صادق رضایی</p>
                 <p class="tp">عضو هیئت علمی دانشگاه صنعتی شیراز</p>
                 <p class="tp">سرپرست مدیریت امور اداری و پشتیبانی دانشگاه</p>
                 <p class="tr">استاد راهنمای پروژه</p>
             </div>
             <div class="col-12 col-md-3">
-                <img class="img-fluid" style="width: 202px; height: 202px;" src="Design/Shahrad.png"/>
+                <img class="img-fluid" style="width: 202px; height: 202px;" src="sources/img/Shahrad.png"/>
                 <p class="th">شهراد گزنی</p>
                 <p class="tp">دانشجوی کارشناسی مهندسی کامپیوتر</p>
                 <p class="tp">دانشگاه صنعتی شیراز</p>
@@ -344,14 +344,14 @@
                 <p class="tr" style="padding-top: 0px !important;">طراحی UI/UX</p>
             </div>
             <div class="col-12 col-md-3">
-                <img class="img-fluid" style="width: 202px; height: 202px;" src="Design/Diacko.png"/>
+                <img class="img-fluid" style="width: 202px; height: 202px;" src="sources/img/Diacko.png"/>
                 <p class="th">محمد مهدی معتمدی</p>
                 <p class="tp">دانشجوی کارشناسی مهندسی کامپیوتر</p>
                 <p class="tp">دانشگاه صنعتی شیراز</p>
                 <p class="tr">طراح مدل تجاری</p>
             </div>
             <div class="col-12 col-md-3">
-                <img class="img-fluid" style="width: 202px; height: 202px;" src="Design/Chad.png"/>
+                <img class="img-fluid" style="width: 202px; height: 202px;" src="sources/img/Chad.png"/>
                 <p class="th">محمد امین آهنین</p>
                 <p class="tp">دانشجوی کارشناسی مهندسی کامپیوتر</p>
                 <p class="tp">دانشگاه صنعتی شیراز</p>
