--- a/login/index.html
+++ b/login/index.html
@@ -16,7 +16,7 @@
         <div class="t2">Designed with ❤️ by Shahrad Gazni</div>
         <div class="t3">دانشگاه صنعتی شیراز</div>
     </div>
-    <img class="sutech" src="icon/sutech.png">
+    <img class="sutech" src="../sources/img/sutech.png">
     <div class="container">
         <div class="box">
             <img src="icon/login.png" alt="ورود" class="login">
