--- a/login/index.html
+++ b/login/index.html
@@ -19,7 +19,7 @@
     <img class="sutech" src="../sources/img/sutech.png">
     <div class="container">
         <div class="box">
-            <img src="icon/login.png" alt="ورود" class="login">
+            <img src="../sources/img/login.png" alt="ورود" class="login">
             <h2>پنل حساب کاربری</h2>
             <form action="POST">
                 <input type="text" placeholder="نام کاربری یا ایمیل" class="input-field" required>
