--- a/login/index.html
+++ b/login/index.html
@@ -8,7 +8,7 @@
 </head>
 <body style="background-color: #283060;">
     <div class="navbar">
-        <a href="#" class="home">خانه</a>
+        <a href="../" class="home">خانه</a>
         <div class="text"><h5>رزرو هوشمند جای پارک</h5></div>
     </div>
     <div class="navdown">
