--- a/index.html
+++ b/index.html
@@ -373,16 +373,16 @@
             window.location.href = 'login'
         });
         document.getElementById('view-signup-api').addEventListener('click', function(){
-            window.location.href = '/API/documentations/signup-api.html'
+            window.location.href = '../API/documentations/signup-api.html'
         });
         document.getElementById('view-login-api').addEventListener('click', function(){
-            window.location.href = '/API/documentations/login-api.html'
+            window.location.href = '../API/documentations/login-api.html'
         });
         document.getElementById('view-parkinglots-api').addEventListener('click', function(){
-            window.location.href = '/API/documentations/parking-lots-api.html'
+            window.location.href = '../API/documentations/parking-lots-api.html'
         });
         document.getElementById('view-reserve-api').addEventListener('click', function(){
-            window.location.href = '/API/documentations/reservation-api.html'
+            window.location.href = '../API/documentations/reservation-api.html'
         });
         
     </script>
