--- a/signup/index.html
+++ b/signup/index.html
@@ -5,17 +5,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>signup</title>
     <link rel="stylesheet" href="signup.css">
+    <style>
+        .my-cont{
+        position: relative;
+        width: 100%;
+        unicode-bidi: isolate;
+        direction: ltr;
+        }
+        .navdown {
+            width: 100%;
+            height: 40px;
+            background-color: #283060;
+            position: absolute;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .sutech{
+            height: auto;
+            width: 25px;
+            position: absolute;
+            right: 15px;
+            bottom: 8.5px;
+        }
+        .t1{
+            font-family: 'shabnam-bold'; 
+            font-size: 12px;
+            color: white;
+            margin-left: 20px;
+        }
+        .t2{
+            font-family: 'shabnam-bold'; 
+            font-size: 12px;
+            color: white;
+        }
+        .t3{
+            font-family: 'shabnam-bold'; 
+            font-size: 12px;
+            color: white;
+            margin-right: 45px; 
+        }
+        @media (max-width:550px){
+            .t1 , .t2 , .t3{
+                font-size: 10px;
+            }
+        }
+    </style>
 </head>
 <body style="background-color: #283060;">
     <div class="navbar">
-        <a href="#" class="home">خانه</a>
+        <a href="../" class="home">خانه</a>
         <div class="text"><h5>رزرو هوشمند جای پارک</h5></div>
     </div>
-    <div class="navdown">
+<!--     <div class="navdown">
         <div class="t1">تمامی حقوق محفوظ است</div>
         <div class="t2">Designed with ❤️ by Shahrad Gazni</div>
         <div class="t3">دانشگاه صنعتی شیراز</div>
-    </div>
+    </div> -->
     <img class="sutech" src="../sources/img/sutech.png">
     <div class="container">
         <div class="box">
@@ -46,5 +92,14 @@
             </form>
         </div>
     </div>
+    <!-- Footer -->
+    <div class="my-cont">
+    <div class="navdown">
+        <div class="t1">تمامی حقوق محفوظ است</div>
+        <div class="t2">Designed with ❤️ by Shahrad Gazni</div>
+        <div class="t3">دانشگاه صنعتی شیراز</div>
+        <img class="sutech" src="../../sources/img/sutech.png">
+    </div>
+ </div>
 </body>
 </html>            
