--- a/login/index.html
+++ b/login/index.html
@@ -28,7 +28,7 @@
             </form>
             <div class="links">
                 <div style="margin-left: 20px;"><a href="#">فراموشی رمز عبور</a></div>
-                <div style="margin-right: 20px;"><a href="#">حساب کاربری ندارید؟</a></div>
+                <div style="margin-right: 20px;"><a href="../signup/">حساب کاربری ندارید؟</a></div>
             </div>
         </div>
     </div>
