--- a/signup/index.html
+++ b/signup/index.html
@@ -98,7 +98,7 @@
         <div class="t1">تمامی حقوق محفوظ است</div>
         <div class="t2">Designed with ❤️ by Shahrad Gazni</div>
         <div class="t3">دانشگاه صنعتی شیراز</div>
-        <img class="sutech" src="../../sources/img/sutech.png">
+        <img class="sutech" src="../sources/img/sutech.png">
     </div>
  </div>
 </body>
