--- a/signup/index.html
+++ b/signup/index.html
@@ -15,7 +15,7 @@
         .navdown {
             width: 100%;
             height: 40px;
-            background-color: #283060;
+            background-color: white;
             position: absolute;
             display: flex;
             justify-content: space-between;
@@ -62,7 +62,7 @@
         <div class="t2">Designed with ❤️ by Shahrad Gazni</div>
         <div class="t3">دانشگاه صنعتی شیراز</div>
     </div> -->
-    <img class="sutech" src="../sources/img/sutech.png">
+<!--     <img class="sutech" src="../sources/img/sutech.png"> -->
     <div class="container">
         <div class="box">
 
