--- a/signup/index.html
+++ b/signup/index.html
@@ -31,18 +31,18 @@
         .t1{
             font-family: 'shabnam-bold'; 
             font-size: 12px;
-            color: white;
+            color: #283060;
             margin-left: 20px;
         }
         .t2{
             font-family: 'shabnam-bold'; 
             font-size: 12px;
-            color: white;
+            color: #283060;
         }
         .t3{
             font-family: 'shabnam-bold'; 
             font-size: 12px;
-            color: white;
+            color: #283060;
             margin-right: 45px; 
         }
         @media (max-width:550px){
@@ -66,7 +66,7 @@
     <div class="container">
         <div class="box">
 
-            <img src="icon/signup.png" alt="ثبت نام" class="signup">
+            <img src="../sources/img/signup.png" alt="ثبت نام" class="signup">
 
             <h2>حساب کاربری جدید</h2>
 
