--- a/signup/index.html
+++ b/signup/index.html
@@ -66,7 +66,7 @@
     <div class="container">
         <div class="box">
 
-            <img src="../sources/img/signup.png" alt="ثبت نام" class="signup">
+            <img src="../sources/img/Account white.png" alt="ثبت نام" class="signup">
 
             <h2>حساب کاربری جدید</h2>
 
