--- a/login/index.html
+++ b/login/index.html
@@ -22,9 +22,9 @@
             <img src="../sources/img/login icon.png" alt="ورود" class="login">
             <h2>پنل حساب کاربری</h2>
             <form action="POST">
-                <input type="text" placeholder="نام کاربری یا ایمیل" class="input-field" required>
-                <input type="password" placeholder="رمز عبور" class="input-field" required>
-                <button class="login-btn">ورود</button>
+                <input id="username" type="text" placeholder="نام کاربری یا ایمیل" class="input-field" required>
+                <input id="password" type="password" placeholder="رمز عبور" class="input-field" required>
+                <button id="submit" class="login-btn">ورود</button>
             </form>
             <div class="links">
                 <div style="margin-left: 20px;"><a href="#">فراموشی رمز عبور</a></div>
