--- a/login/index.html
+++ b/login/index.html
@@ -6,6 +6,7 @@
     <title>Login</title>
     <link rel="stylesheet" href="login.css">
 </head>
+<script src="script.js"></script>
 <body style="background-color: #283060;">
     <div class="navbar">
         <a href="../" class="home">خانه</a>
