--- a/login/index.html
+++ b/login/index.html
@@ -6,7 +6,6 @@
     <title>Login</title>
     <link rel="stylesheet" href="login.css">
 </head>
-<script src="script.js"></script>
 <body style="background-color: #283060;">
     <div class="navbar">
         <a href="../" class="home">خانه</a>
@@ -22,7 +21,8 @@
         <div class="box">
             <img src="../sources/img/login icon.png" alt="ورود" class="login">
             <h2>پنل حساب کاربری</h2>
-            <form action="POST">
+<!--             <form action="POST"> -->
+            <form>
                 <input id="username" type="text" placeholder="نام کاربری یا ایمیل" class="input-field" required>
                 <input id="password" type="password" placeholder="رمز عبور" class="input-field" required>
                 <button id="submit" class="login-btn">ورود</button>
@@ -33,5 +33,6 @@
             </div>
         </div>
     </div>
+<script src="script.js"></script>
 </body>
 </html>
