--- a/login/index.html
+++ b/login/index.html
@@ -22,11 +22,13 @@
             <img src="../sources/img/login icon.png" alt="ورود" class="login">
             <h2>پنل حساب کاربری</h2>
 <!--             <form action="POST"> -->
-            <form>
+<!--             <form> -->
+            <div>
                 <input id="username" type="text" placeholder="نام کاربری یا ایمیل" class="input-field" required>
                 <input id="password" type="password" placeholder="رمز عبور" class="input-field" required>
                 <button id="submit" class="login-btn">ورود</button>
-            </form>
+            </div>
+<!--             </form> -->
             <div class="links">
                 <div style="margin-left: 20px;"><a href="#">فراموشی رمز عبور</a></div>
                 <div style="margin-right: 20px;"><a href="../signup/">حساب کاربری ندارید؟</a></div>
